# commitizen-version-bump

./: LICENSE  README.md  pyproject.toml
cz_version_bump/: __init__.py  git.py
